<?xml version="1.0"?>
<package>
  <name>urdfdom_headers</name>
  <version>1.0.0</version>
  <description>A library headers to access URDFs using the DOM model.</description>
  <maintainer email="hsu@osrfoundation.org">John Hsu</maintainer>
  <maintainer email="isucan@willowgarage.com">Ioan Sucan</maintainer>

  <license>BSD</license>

  <author>Wim Meeussen</author>
  <author>John Hsu</author>
  <url type="website">http://ros.org/wiki/urdf</url>
  <url type="bugtracker">https://github.com/ros/urdfdom/issues</url>
  <url type="repository">https://github.com/ros/urdfdom</url>

  <buildtool_depend>catkin</buildtool_depend>


  <run_depend>catkin</run_depend>
  
  <export>
  </export>
</package>
